--- a/ask2.ipynb
+++ b/ask2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,82 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 38472 entries, 0 to 38471\n",
-      "Data columns (total 15 columns):\n",
-      " #   Column                           Non-Null Count  Dtype  \n",
-      "---  ------                           --------------  -----  \n",
-      " 0   Entity                           38472 non-null  object \n",
-      " 1   Continent                        38472 non-null  object \n",
-      " 2   Latitude                         38472 non-null  float64\n",
-      " 3   Longitude                        38472 non-null  float64\n",
-      " 4   Average temperature per year     38472 non-null  int64  \n",
-      " 5   Hospital beds per 1000 people    38472 non-null  float64\n",
-      " 6   Medical doctors per 1000 people  38472 non-null  float64\n",
-      " 7   GDP/Capita                       38472 non-null  float64\n",
-      " 8   Population                       38472 non-null  int64  \n",
-      " 9   Median age                       38472 non-null  int64  \n",
-      " 10  Population aged 65 and over (%)  38472 non-null  int64  \n",
-      " 11  Date                             38472 non-null  object \n",
-      " 12  Daily tests                      30577 non-null  float64\n",
-      " 13  Cases                            38218 non-null  float64\n",
-      " 14  Deaths                           34862 non-null  float64\n",
-      "dtypes: float64(8), int64(4), object(3)\n",
-      "memory usage: 4.4+ MB\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def checkMissingData():\n",
     "    df = pd.read_csv('data.csv')\n",
     "    print(df.info())\n",
     "    \n",
-    "checkMissingData()"
+    "# checkMissingData()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 38472 entries, 0 to 38471\n",
-      "Data columns (total 15 columns):\n",
-      " #   Column                           Non-Null Count  Dtype  \n",
-      "---  ------                           --------------  -----  \n",
-      " 0   Entity                           38472 non-null  object \n",
-      " 1   Continent                        38472 non-null  object \n",
-      " 2   Latitude                         38472 non-null  float64\n",
-      " 3   Longitude                        38472 non-null  float64\n",
-      " 4   Average temperature per year     38472 non-null  int64  \n",
-      " 5   Hospital beds per 1000 people    38472 non-null  float64\n",
-      " 6   Medical doctors per 1000 people  38472 non-null  float64\n",
-      " 7   GDP/Capita                       38472 non-null  float64\n",
-      " 8   Population                       38472 non-null  int64  \n",
-      " 9   Median age                       38472 non-null  int64  \n",
-      " 10  Population aged 65 and over (%)  38472 non-null  int64  \n",
-      " 11  Date                             38472 non-null  object \n",
-      " 12  Daily tests                      38472 non-null  float64\n",
-      " 13  Cases                            38472 non-null  float64\n",
-      " 14  Deaths                           38472 non-null  float64\n",
-      "dtypes: float64(8), int64(4), object(3)\n",
-      "memory usage: 4.4+ MB\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def missingDataHandler():\n",
     "    df = pd.read_csv('data.csv')\n",
@@ -101,7 +41,24 @@
     "        df[column] = imputer.fit_transform(df[column].values.reshape(-1, 1))\n",
     "    print(df.info())\n",
     "    \n",
-    "missingDataHandler()"
+    "# missingDataHandler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def addNewColumns(entity):\n",
+    "    df = pd.read_csv('data.csv')\n",
+    "    df_filter = df[df.iloc[:, 0] == entity]\n",
+    "    selectedColumns = ['Entity', 'Date', 'Cases', 'Deaths', \"Daily tests\"]\n",
+    "    df_new = df_filter[selectedColumns]\n",
+    "    df_new['Positivity Rate'] = df_new['Cases'] / df_new['Daily tests']\n",
+    "    df_new['Mortality Rate'] = df_new['Deaths'] / df_new['Cases']\n",
+    "    df_new['Date'] = pd.to_datetime(df_new['Date'])\n",
+    "    "
    ]
   }
  ],
