--- a/ask3_SVM.ipynb
+++ b/ask3_SVM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
     "from scipy.stats import zscore # for standardizing data\n",
     "from sklearn.impute import SimpleImputer # for imputing missing values\n",
     "from sklearn.preprocessing import StandardScaler # for standardizing data\n",
-    "from sklearn.svm import SVR # for SVM regression"
+    "from sklearn.svm import SVR # for SVM regression\n",
+    "from csvToExcel import toExcel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +91,8 @@
       " 14  Deaths                           38472 non-null  float64\n",
       "dtypes: float64(8), int64(4), object(3)\n",
       "memory usage: 4.4+ MB\n",
-      "None\n"
+      "None\n",
+      "Data has been successfully inserted into the Excel file.\n"
      ]
     }
    ],
@@ -106,12 +108,13 @@
     "    print(df.info())\n",
     "    return df\n",
     "    \n",
-    "dataFrame = missingDataHandler()"
+    "dataFrame = missingDataHandler()\n",
+    "toExcel(dataFrame, 'preprocessedData')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,13 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Data has been successfully inserted into the Excel file.\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 310 entries, 11802 to 12111\n",
       "Data columns (total 17 columns):\n",
@@ -173,13 +177,13 @@
     "    return df\n",
     "\n",
     "dataset = addPositivityPercent(dataFrame2)\n",
-    "\n",
+    "toExcel(dataset, 'GreeceData')\n",
     "print(dataset.info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +878,7 @@
        "SVR()"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +918,7 @@
        "array([[0.02711721]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
