--- a/ask2.ipynb
+++ b/ask2.ipynb
@@ -52,7 +52,7 @@
    ],
    "source": [
     "def checkMissingData():\n",
-    "    df = pd.read_csv('data.csv')\n",
+    "    df = pd.read_csv('DataFolder/data.csv')\n",
     "    print(df.info())\n",
     "    \n",
     "checkMissingData()"
@@ -95,7 +95,7 @@
    ],
    "source": [
     "def missingDataHandler():\n",
-    "    df = pd.read_csv('data.csv')\n",
+    "    df = pd.read_csv('DataFolder/data.csv')\n",
     "    imputer = SimpleImputer(missing_values = np.nan, strategy = 'mean')\n",
     "    missingColumns = ['Daily tests', 'Cases', 'Deaths']\n",
     "    for column in missingColumns:\n",
@@ -155,7 +155,7 @@
    ],
    "source": [
     "def elbowMethod():\n",
-    "    dataFrame = pd.read_csv('data.csv')\n",
+    "    dataFrame = pd.read_csv('DataFolder/data.csv')\n",
     "    entities = dataFrame.iloc[:, 0].unique()\n",
     "    for entity in entities:\n",
     "        df = addNewColumns(entity)\n",
