--- a/ask1.ipynb
+++ b/ask1.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "# Function to fetch data about the cases and deaths of a country\n",
     "def countryData(country):\n",
-    "    df = pd.read_csv('data.csv')\n",
+    "    df = pd.read_csv('DataFolder/data.csv')\n",
     "    df = df[df.iloc[:,0] == country]\n",
     "    displayColumns = ['Entity', 'Date', 'Cases', 'Deaths']\n",
     "    df = df[displayColumns]\n",
@@ -63,7 +63,7 @@
    "source": [
     "# Function to get the cases and deaths of all countries per continent\n",
     "def countriesPerContinentData():\n",
-    "    df = pd.read_csv('data.csv')\n",
+    "    df = pd.read_csv('DataFolder/data.csv')\n",
     "    deaths = df.groupby(['Entity', 'Continent'])['Deaths'].max()\n",
     "    cases = df.groupby(['Entity', 'Continent'])['Cases'].max()\n",
     "    data = np.empty((len(cases), 4), dtype=object) # 4 columns: country, continent, cases, deaths\n",
@@ -118,7 +118,7 @@
    "source": [
     "# Function to show the correlation between the columns of the dataset\n",
     "def correlationData():\n",
-    "    df = pd.read_csv(\"data.csv\")\n",
+    "    df = pd.read_csv(\"DataFolder/data.csv\")\n",
     "    corr = df.corr() # Calculate the correlation between the columns\n",
     "    plt.figure(figsize=(12, 8))\n",
     "    sns.heatmap(corr, annot=True, cmap=plt.cm.Reds) # Create a heatmap\n",
