--- a/ask1.ipynb
+++ b/ask1.ipynb
@@ -9,8 +9,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns # for plotting\n",
-    "from scipy.stats import zscore # for standardizing data"
+    "import seaborn as sns # for plotting"
    ]
   },
   {
