Almost finished ask 3

--- a/ask1.ipynb
+++ b/ask1.ipynb
@@ -45,7 +45,7 @@
     "    ax1.set_ylabel('Daily Cases', color='blue')\n",
     "    ax1.tick_params(axis='y', labelcolor='blue')\n",
     "    \n",
-    "    ax2 = ax1.twinx() # instantiate a second axes that shares the same x-axis\n",
+    "    ax2 = ax1.twinx() # instantiate a second axis that shares the same x-axis\n",
     "    ax2.plot(df['Date'], df['Daily Deaths'], color='red')\n",
     "    ax2.set_ylabel('Daily Deaths', color='red')\n",
     "    ax2.tick_params(axis='y', labelcolor='red')\n",
