--- a/ask2.ipynb
+++ b/ask2.ipynb
@@ -9,9 +9,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns # for plotting\n",
-    "from sklearn.impute import SimpleImputer # for imputing missing values\n",
-    "from sklearn.cluster import KMeans # for clustering"
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.cluster import KMeans"
    ]
   },
   {
